# redis-ai-research-public

./: LICENSE  README.md
coding-agents/: .env.example  Dockerfile  README.md  checks.md  (+4 more)
learning-agents/: .env.sample  .gitignore  Makefile  README.md  experiment.json  pyproject.toml
learning-agents/config/: bank-config.yaml  insurance-config.yaml
learning-agents/example_queries/: banking_queries.json  insurance_queries.json
learning-agents/experiments/: EXPERIMENT_README.md  experiment.json  insurance_simple_experiment.ipynb
learning-agents/scripts/: run_experiment.py
learning-agents/src/learning_agent/: errors.py  main.py  orchestrator.py
learning-agents/src/learning_agent/agents/: base.py  column_summary.py  filter.py  guidance.py  interpretation.py
learning-agents/src/learning_agent/analysis/: analyze_latency.py  analyze_tokens.py
learning-agents/src/learning_agent/core/: cache.py  redis_vector_index.py  utils.py
learning-agents/src/learning_agent/data/: reader.py
learning-agents/src/learning_agent/logging/: event_log_analytics.py  event_log_html.py  logger.py
memorydb-semantic-search/: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CONNECT_TO_BASTION.md  EMBEDDING_GENERATION.md  MEMORYDB_SETUP.md  README.md  benchmark.py  benchmark_concurrent.py  benchmark_hybrid.py  config.example.yaml  config.py  embed_and_load.py  load_hybrid.py  main.py  opencode.jsonc  pyproject.toml  report.md  search.py  search_hybrid.py  server.py
memorydb-semantic-search/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+21 files in other folders)
