[project]
name = "learning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.6.0",
    "black>=25.1.0",
    "google-genai>=1.19.0",
    "huggingface-hub>=0.33.4",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "ollama>=0.5.1",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "pylint>=3.3.7",
    "python-dotenv>=1.1.1",
    "redisvl>=0.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "termcolor>=3.1.0",
]

[tool.uv.workspace]
members = [
    "experiments/ai-hackathon-learning-agent",
]

[project.scripts]
analyze-csv = "learning_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
