[project]
name = "memorydb-semantic-search"
version = "0.1.0"
description = "Semantic search over LongMemEval chat sessions on AWS MemoryDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.19",
    "redis[hiredis]>=5.0",
    "sentence-transformers>=5.5.1",
    "pyyaml>=6.0",
]
